--- a/views/item_form.ejs
+++ b/views/item_form.ejs
@@ -9,39 +9,36 @@
     <div class="row">
         <div class="mb-3 col-12 col-md-6">
             <label for="name" class="form-label">Item Name</label>
-            <input type="text" class="form-control" id="name" name="name" required=true
+            <input type="text" class="form-control" id="name" name="name" required
                 value=<%-(undefined===locals.item ? '' : item.name)%>>
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="sku" class="form-label">SKU</label>
-            <input type="text" class="form-control" id="sku" name="sku" required=true
+            <input type="text" class="form-control" id="sku" name="sku" required
                 value=<%-(undefined===locals.item ? '' : item.sku)%>>
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="price" class="form-label">Price</label>
-            <input type="number" class="form-control" id="price" name="price" required=true
+            <input type="number" class="form-control" id="price" name="price" required step="any"
                 value=<%-(undefined===locals.item ? '' : item.price)%>>
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="quantity" class="form-label">Quantity In Stock</label>
-            <input type="number" class="form-control" id="quantity" name="quantity" required=true
+            <input type="number" class="form-control" id="quantity" name="quantity" required
                 value=<%-(undefined===locals.item ? '' : item.quantity)%>>
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="weight" class="form-label">Weight (Pounds)</label>
-            <input type="number" class="form-control" id="weight" name="weight" required=false
+            <input type="number" class="form-control" id="weight" name="weight" step="any"
                 value=<%-(undefined===locals.item ? '' : item.weight)%>>
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="Category" class="form-label">Category</label>
-            <select class="form-select" name="category" placeholder="Select a Category" required="true">
+            <select class="form-select" name="category" placeholder="Select a Category" required>
                 <option value="" disabled selected>Select a Category</option>
                 <% if(locals.categories) { Array.from(locals.categories).forEach(category => { %>
                 <option value=<%= category._id %>
-                    <% if(locals.item){if (category._id.toString() == locals.item.category){%>
-                        selected
-                    <%}}%>
-                    >
+                    <% if(locals.item){if (category._id.toString() == locals.item.category){%> selected <%}}%>>
                     <%= category.name %>
                 </option>
 
@@ -50,8 +47,8 @@
         </div>
         <div class="mb-3">
             <label for="description" class="form-label">Item Description</label>
-            <textarea class="form-control" name="description" id="description" cols="30" rows="5"
-                required=true><%-(undefined===locals.item ? '' : item.description)%></textarea>
+            <textarea class="form-control" name="description" id="description" cols="30"
+                rows="5"><%-(undefined===locals.item ? '' : item.description)%></textarea>
         </div>
     </div>
     <div class="text-center">
