added the ability to update item data

--- a/views/item_detail.ejs
+++ b/views/item_detail.ejs
@@ -37,7 +37,7 @@
     </div>
 </div>
 <div class="text-center mb-3">
-    <a href="#" class="btn btn-light">
+    <a href="<%=item.url%>/update" class="btn btn-light">
         Edit
     </a>
     <a href="#" class="btn btn-danger">
