--- a/views/category_detail.ejs
+++ b/views/category_detail.ejs
@@ -1,10 +1,10 @@
 <%- include('header'); -%>
 <div class="row">
     <div class="col-12">
-        <h1 class="text-center m-4"><%=results.category.name%></h1>
+        <h1 class="text-center m-4"><%=category.name%></h1>
     </div>
     <div class="col-12">
-        <p class="text-center"><%=results.category.description%></p>
+        <p class="text-center"><%=category.description%></p>
         <div class="text-center mb-3">
             <a href="#" class="btn btn-light">
                 Edit
@@ -19,7 +19,7 @@
 </div>
 
 <div class="row">
-    <% results.items.forEach(item => { %>
+    <% items.forEach(item => { %>
     <div class="col-12 col-sm-6 col-md-4 mt-2 mb-2">
       <div class="card bg-dark category-cards">
         <div class="card-body">
