--- a/views/item_form.ejs
+++ b/views/item_form.ejs
@@ -10,34 +10,35 @@
         <div class="mb-3 col-12 col-md-6">
             <label for="name" class="form-label">Item Name</label>
             <input type="text" class="form-control" id="name" name="name" required
-                value=<%-(undefined===locals.item ? '' : item.name)%>>
+                value="<%-(undefined===locals.item ? '' : item.name)%>">
         </div>
+        <%console.log(item.name)%>
         <div class="mb-3 col-12 col-md-6">
             <label for="sku" class="form-label">SKU</label>
             <input type="text" class="form-control" id="sku" name="sku" required
-                value=<%-(undefined===locals.item ? '' : item.sku)%>>
+                value="<%-(undefined===locals.item ? '' : item.sku)%>">
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="price" class="form-label">Price</label>
             <input type="number" class="form-control" id="price" name="price" required step="any"
-                value=<%-(undefined===locals.item ? '' : item.price)%>>
+                value="<%-(undefined===locals.item ? '' : item.price)%>">
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="quantity" class="form-label">Quantity In Stock</label>
             <input type="number" class="form-control" id="quantity" name="quantity" required
-                value=<%-(undefined===locals.item ? '' : item.quantity)%>>
+                value="<%-(undefined===locals.item ? '' : item.quantity)%>">
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="weight" class="form-label">Weight (Pounds)</label>
             <input type="number" class="form-control" id="weight" name="weight" step="any"
-                value=<%-(undefined===locals.item ? '' : item.weight)%>>
+                value="<%-(undefined===locals.item ? '' : item.weight)%>">
         </div>
         <div class="mb-3 col-12 col-md-6">
             <label for="Category" class="form-label">Category</label>
             <select class="form-select" name="category" placeholder="Select a Category" required>
                 <option value="" disabled selected>Select a Category</option>
                 <% if(locals.categories) { Array.from(locals.categories).forEach(category => { %>
-                <option value=<%= category._id %>
+                <option value="<%= category._id %>"
                     <% if(locals.item){if (category._id.toString() == locals.item.category){%> selected <%}}%>>
                     <%= category.name %>
                 </option>
@@ -62,7 +63,7 @@
 <h5 class="mt-3">Errors</h5>
 <ul>
     <% errors.forEach(error => { %>
-    <li><%=error.msg%></li>
+    <li><%-error.msg%></li>
     <%});%>
 </ul>
 <%}%>
