category update bugs fixed

--- a/views/category_form.ejs
+++ b/views/category_form.ejs
@@ -23,7 +23,7 @@
   <h5 class="mt-3">Errors</h5>
 <ul>
   <% errors.forEach(error => { %>
-    <li><%=error.msg%></li>
+    <li><%-error.msg%></li>
  <%});%>
 </ul>
   <%}%>
