--- a/views/category_detail.ejs
+++ b/views/category_detail.ejs
@@ -6,7 +6,7 @@
     <div class="col-12">
         <p class="text-center"><%=category.description%></p>
         <div class="text-center mb-3">
-            <a href="#" class="btn btn-light">
+            <a href="<%=category.url%>/update" class="btn btn-light">
                 Edit
             </a>
             <a href="#" class="btn btn-danger">
@@ -24,11 +24,10 @@
       <div class="card bg-dark category-cards">
         <div class="card-body">
           <h4 class="card-title"><a href="<%=item.url%>" class="category-link"><%=item.name%></a></h4>
-          <p class="card-text"><%=item.description%></p>
+          <p class="card-text"><%=(item.description.length > 100 ? item.description.substring(0, 99) + "..." : item.description)%></p>
         </div>
       </div>
     </div>
-  
     <% }); %>
   
   </div>
