--- a/views/category_detail.ejs
+++ b/views/category_detail.ejs
@@ -9,7 +9,7 @@
             <a href="<%=category.url%>/update" class="btn btn-light">
                 Edit
             </a>
-            <a href="#" class="btn btn-danger">
+            <a href="<%=category.url%>/delete" class="btn btn-danger">
                 Delete
             </a>
         </div>
